# gitdem

./: .cursorignore  .gitignore  LICENSE-APACHE  README.md  package.json
.github/workflows/: test-git-remote-sol.yml  test-on-chain.yml  test-remote-helper.yml  test.yml
cli/: README.md
git-remote-evm/: Cargo.toml  build.rs  gitremote-helpers.adoc
git-remote-evm/src/: args.rs  e2e_tests.rs  integration_tests.rs  macros.rs  main.rs
git-remote-evm/src/cli/: error.rs  mod.rs
git-remote-evm/src/config/: git.rs  mock.rs  mod.rs
git-remote-evm/src/core/: git.rs  hash.rs  kv_source.rs  mod.rs  object.rs  reference.rs
git-remote-evm/src/core/config/: git.rs  mock.rs  mod.rs
git-remote-evm/src/core/git/: mock.rs  mod.rs  system.rs
git-remote-evm/src/core/kv_source/: git_config.rs  mock.rs  mod.rs
git-remote-evm/src/core/remote_helper/: config.rs  contract.rs  error.rs  evm.rs  executor.rs  mock.rs  mod.rs
git-remote-evm/src/core/remote_helper/executor/: assets.rs  background.rs  browser.rs  mock.rs  mod.rs
git-remote-evm/src/core/remote_helper/executor/link_opener/: browser.rs  mock.rs  mod.rs
git-remote-evm/src/remote_helper/: hash.rs  mock.rs  mod.rs
git-remote-evm/src/remote_helper/evm/: config.rs  contract.rs  helper.rs  mod.rs
git-remote-evm/src/remote_helper/executor/: background.rs  mod.rs
git-remote-sol/: Cargo.toml  build.rs
git-remote-sol/src/: args.rs  integration_tests.rs  main.rs  tests.rs
on-chain/: Anchor.toml  hardhat.config.ts  package-lock.json  package.json
wallet-bridge/: README.md  index.html  package-lock.json  package.json
(+28 files in other folders)
